fix: Don't hide overflow on zoom out

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,7 @@ button {
 }
 
 main {
+  min-height: 100svh;
   position: relative;
   overflow: hidden;
 }
